# douban-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/: claim.rs  config.rs  consts.rs  discover.rs  infra.rs  layer.rs  lib.rs  middleware.rs  model.rs  pool.rs  registry.rs  status.rs  utils.rs
common/src/config/: discover.rs  layer.rs  middleware.rs  mod.rs  registry.rs  service.rs
common/src/discover/: etcd.rs  mod.rs
common/src/infra/: claim.rs  command.rs  cqrs.rs  id.rs  mod.rs  resolver.rs
common/src/infra/cqrs/: args.rs
common/src/layer/: combined_auth.rs  cookie_auth.rs  http_auth.rs  role_mapping.rs
common/src/middleware/: apollo.rs  consul.rs  etcd.rs  http_auth.rs  mod.rs  redis.rs  role_mapping.rs
common/src/registry/: etcd.rs
common/src/utils/macros/: mod.rs
config/template/: auth_token.yml  token.grpc.yml  token.yml  user-rest.yml  user.grpc.yml  user.rest.yml  user.yml
design-pattern/: CQRS.md  依赖注入.md  混合架构.md  配置.md  错误处理.md
migration/: Cargo.toml
migration/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migration/migrations/2023-02-12-073404_create_users/: down.sql  up.sql
migration/migrations/2023-03-03-121127_create_movies/: down.sql  up.sql
migration/src/: schema.rs
proto/: Cargo.toml  buf.yaml  build.rs
proto/auth/token/v1/: token.proto
proto/src/: lib.rs
proto/src/auth/token/v1/: token.proto
proto/src/common/v1/: common.proto
proto/src/movie/celebrity/v1/: celebrity.proto
proto/src/movie/movie/v1/: movie.proto
proto/src/movie/score/v1/: score.proto
proto/src/user/sys/v1/: sys.proto
proto/user/sys/v1/: sys.proto
resource/rolemap/: casbin_model.conf  test_policy.csv
script/: mod_convert.py
service/: Cargo.toml
service/auth/: Cargo.toml  build.rs
service/auth/proto/: auth.proto  message.proto  token.proto
service/auth/src/: lib.rs
service/auth/src/domain/: token.rs
service/auth/src/domain/token/: command.rs  error.rs  mod.rs  model.rs  query.rs
service/auth/src/domain/token/command/: clear_cache.rs  generate_token.rs  mod.rs  refresh_token.rs
service/auth/src/domain/token/model/: mod.rs  store.rs
service/auth/src/domain/token/query/: auth_token.rs  mod.rs  parse_token.rs
service/auth/src/rpc/: token.rs
service/celebrity/: Cargo.toml
service/movie/: Cargo.toml
service/src/: lib.rs
service/src/auth/: mod.rs
service/src/auth/domain/token/: mod.rs
service/src/auth/domain/token/command/: clear_cache.rs  generate_token.rs  mod.rs  refresh_token.rs
service/src/auth/domain/token/model/: claim.rs  mod.rs  token.rs
service/src/auth/domain/token/query/: parse_token.rs
service/src/auth/rpc/: mod.rs  token.rs
service/src/movie/domain/: mod.rs
service/src/movie/domain/celebrity/: mod.rs
service/src/movie/domain/celebrity/command/: del_celebrity.rs  mod.rs  put_celebrity.rs
service/src/movie/domain/celebrity/model/: mod.rs  movie.rs
service/src/movie/domain/celebrity/query/: mod.rs
service/src/movie/domain/movie/query/: list.rs
service/src/movie/rpc/: mod.rs
service/src/services/auth/: mod.rs
service/src/services/auth/domain/token/: mod.rs
service/src/services/auth/domain/token/command/: clear_cache.rs  generate_token.rs  refresh_token.rs
service/src/services/auth/domain/token/model/: store.rs
service/src/services/auth/domain/token/query/: parse_token.rs
service/src/services/auth/rpc/: token.rs
service/src/services/user/domain/user/: mod.rs
service/src/services/user/domain/user/command/: bind.rs  register.rs
service/src/services/user/domain/user/model/: mod.rs
service/src/services/user/domain/user/query/: login.rs
service/src/services/user/rest/: error.rs  router.rs  types.rs
service/src/services/user/rest/handler/: bind.rs  login.rs  mod.rs  register.rs
service/src/services/user/rpc/: user.rs
service/src/user/domain/user/: mod.rs
service/src/user/domain/user/command/: bind.rs  register.rs
service/src/user/domain/user/model/: oauth.rs  user.rs
service/src/user/domain/user/query/: login.rs
service/src/user/rest/: error.rs  mod.rs  router.rs  types.rs
service/src/user/rest/handler/: bind.rs  login.rs  mod.rs  register.rs
service/src/user/rpc/: mod.rs  user.rs
service/user/: Cargo.toml
service/user/src/: lib.rs  rest.rs
service/user/src/api/: error.rs  mod.rs  route.rs  types.rs
service/user/src/api/handler/: bind.rs  login.rs  mod.rs  register.rs
service/user/src/domain/: user.rs
service/user/src/domain/user/: command.rs
service/user/src/domain/user/command/: bind.rs  register.rs
service/user/src/domain/user/query/: login.rs
service/user/src/rest/: error.rs  handler.rs  mod.rs  router.rs  types.rs
service/user/src/rest/handler/: bind.rs  login.rs  mod.rs  register.rs
service/user/src/rpc/: user.rs
