[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common-rs" }
tonic = "0.8.3"
prost = "0.11"
serde = {version = "1.0", features = ["derive"] }


[build-dependencies.tonic-build]
version = "0.8.4"

[build-dependencies.glob]
version = "0.3.1"

