[package]
name = "proto"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common-rs" }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8.3"

[build-dependencies.glob]
version = "0.3.1"

[build-dependencies.tonic-build]
version = "0.8.4"

