[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.5" }
tokio = { version = "1.22.0", features = ["full"] }
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["postgres", "extras"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
common = { path = "../common-rs" }
hmac = "0.12"
sha2 = "0.10.6"
proto = { path = "../proto" }
migration = { path = "../migration" }
thiserror = "1.0.37"
tonic = "0.8.3"
prost = "0.11"
parking_lot = "0.12"
tonic-health = "0.8.0"
jsonwebtoken = "8"
base64 = "0.21.0"
redis = { version = "0.22.1", features = ["tokio-comp", "r2d2", "cluster"] }
r2d2 = "0.8"
futures = "0.3.25"
once_cell = "1.16.0"
rand = "*"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.4", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "0.2.8"
cookie = { version = "0.17.0", features = ["secure", "percent-encode"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[build-dependencies.tonic-build]
version = "0.8.4"
