[package]
name = "service"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.5" }
base64 = "0.21.0"
chrono = "0.4.23"
common = { path = "../common-rs" }
cookie = { version = "0.17.0", features = ["secure", "percent-encode"] }
diesel = { version = "2.0.0", features = ["postgres", "extras"] }
futures = "0.3.25"
hmac = "0.12"
http = "0.2.8"
jsonwebtoken = "8"
migration = { path = "../migration" }
once_cell = "1.16.0"
parking_lot = "0.12"
prost = "0.11"
proto = { path = "../proto" }
r2d2 = "0.8"
rand = "*"
redis = { version = "0.22.1", features = ["tokio-comp", "r2d2", "cluster"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tonic = "0.8.3"
tonic-health = "0.8.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.4", features = ["catch-panic", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

[build-dependencies.tonic-build]
version = "0.8.4"
