[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# basic
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
serde = {version = "1.0", features = ["derive"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
# utils
once_cell = "1.16.0"
chrono = "0.4.23"
jsonwebtoken = "8"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.89"
base64 = "0.13.1"
pin-project-lite = "0.2.9"
# axum (Http API)
axum = "0.6.1"
# tracing
log = "0.4"
tracing = "0.1"
tracing-attributes = "0.1.23"
tracing-subscriber = "0.3"
# http
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.23"
cookie = "0.16.1"
# tonic (gRPC)
tonic = "0.8.3"
tonic-build = "0.8.4"
# casbin
casbin = "2.0.9"
# common
common = { path = "../../common" }

[build-dependencies]
tonic-build = "0.8.4"